--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@vladmandic/human": "^3.1.2"
+    "@vladmandic/human": "^3.1.2",
+    "p-limit": "^4.0.0"
   }
 }
