removed intersection observer for now

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
 		{
 			"js": ["dist/content.js"],
 			"matches": ["<all_urls>"],
-			"run_at": "document_end"
+			"run_at": "document_start"
 		}
 	],
 	"web_accessible_resources": [
