--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "build": "vite build",
+    "dev": "vite build --watch",
     "release": "bestzip extension.zip dist manifest.json src/assets src/background.js src/popup.html src/popup.js"
   },
   "devDependencies": {
