--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
 	],
 	"web_accessible_resources": [
 		{
-			"resources": ["src/assets/*"],
+			"resources": ["src/assets/*", "src/offscreen.html"],
 			"matches": ["https://*/*", "http://*/*"]
 		}
 	]
