--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
 		"default_title": "HaramBlur",
 		"default_popup": "src/popup.html"
 	},
+	"minimum_chrome_version": "109",
 	"background": {
 		"service_worker": "src/background.js"
 	},
