--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"scripts": {
 		"build": "vite build",
 		"dev": "vite build --watch",
-		"release": "bestzip extension.zip dist manifest.json src/assets src/background.js src/popup.html src/popup.js"
+		"release": "bestzip extension.zip dist manifest.json src/assets src/background.js src/popup.html src/popup.js src/offscreen.html src/offscreen.js src/modules/* tfjs/*"
 	},
 	"devDependencies": {
 		"bestzip": "^2.2.1",
