--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-	"scripts": {
-		"build": "vite build",
-		"dev": "vite build --watch",
-		"release": "bestzip extension.zip dist manifest.json src/assets src/background.js src/constants.js src/translations.js src/popup.html src/popup.js src/offscreen.html src/offscreen.js src/modules/* tfjs/*"
-	},
-	"devDependencies": {
-		"bestzip": "^2.2.1",
-		"vite": "^4.4.9"
-	}
+    "scripts": {
+        "build": "vite build",
+        "dev": "vite build --watch",
+        "release": "bestzip extension.zip dist manifest.json src/assets src/background.js src/constants.js src/translations.js src/popup.html src/popup.js src/offscreen.html src/offscreen.js src/modules/* tfjs/*",
+        "prepare": "husky"
+    },
+    "devDependencies": {
+        "bestzip": "^2.2.1",
+        "husky": "^9.0.11",
+        "lint-staged": "^15.2.7",
+        "prettier": "3.3.2",
+        "vite": "^4.4.9"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
+    }
 }
